--- a/pages/local_leaders/using-pathway.html
+++ b/pages/local_leaders/using-pathway.html
@@ -43,71 +43,66 @@
     
 
     <body>
-      <header>
-        <div class="navbar navbar-inverse signIn pathway-header" role="signIn">
-          <div class="container">
-            <ul class="nav navbar-nav orange-bar">
-              <li class="header-column visible-xs pull-left">
-                &nbsp;
-              </li>
-              <li class="header-column pull-left">
-                <a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
-              </li>
-              <li class="header-column pull-right">
-                <a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
-                <form class="navbar-right pull-right">
-                  <button type="submit" class="btn signin-btn">
-                    SIGN IN
-                  </button>
-                </form>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="navbar navbar-inverse site-navigation" role="navigation">
-          <div id="main_nav" class="container">
-            <div class="navbar-header">
-              <button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-            </div>
-            <nav id="siteNavigation" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="nav-1">
-                  <a href="../testimonials/testimonials.html">TESTIMONIALS</a>
-                </li>
-                <li class="nav-2">
-                  <a href="../what_is_pathway/what_is_pathway.html">WHAT IS PATHWAY</a>
-                </li>
-                <li class="nav-3">
-                  <a href="#">JOIN PATHWAY</a>
-                </li>
-                <li class="nav-4">
-                  <a href="../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a>
-                </li>
-                <li class="nav-5 nav_active">
-                  <a href="using-pathway.html">LOCAL LEADERS</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <div class="breadCrumbHolder module hidden-xs">
-          <div class="container">
-            <div id="breadCrumb" class="breadCrumb module">
-              <div style="overflow:hidden; position:relative;"><div><ul style="width: 5000px;">
-                <li class="first"><a href="../../index.htm">Home</a></li>
-                <li><a href="using-pathway.html">Local Leaders</a></li>
-                <li class="last">Using Pathway in Your Ministry</li>
-              </ul></div></div>
-            </div>
-          </div>
-        </div>
-      </header>
+      <!-- START First Top Header -->
+<div class="navbar navbar-inverse signIn pathway-header" role="signIn">
+  <div class="container">
+    <ul class="nav navbar-nav orange-bar">
+      <li class="header-column visible-xs pull-left">&nbsp;</li>
+      <li class="header-column pull-left">
+        <a class="navbar-brand img-responsive hidden-xs" href="../../index.htm"><img id="pathway-logo" width="280px" 
 
+          src="../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img id="pathway-mobile-logo" src="../../img/mobile-logo.png"></a>
+        </li>
+        <li class="header-column pull-right">
+          <a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../img/speechbubble.png" 
+
+            width="13" height="11" alt="speech"></a>
+            <form class="navbar-right pull-right">
+              <button type="submit" class="btn signin-btn">
+                SIGN IN
+              </button>
+            </form>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- END Top Header Start -->
+    <!-- START Navbar -->
+    <div class="navbar navbar-inverse site-navigation" role="navigation">
+      <div id="main_nav" class="container">
+        <div class="navbar-header">
+          <button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <nav id="siteNavigation" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="nav-1"><a href="../testimonials/testimonials.html">Testimonials</a></li>
+            <li class="nav-2"><a href="../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+            <li class="nav-3"><a href="#join">Join Pathway</a></li>
+            <li class="nav-4"><a href="../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
+            <li class="nav-5 nav_active"><a href="using-pathway.html">Local Leaders</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div> 
+    <!-- END Navbar --> 
+    <!-- Breadcrumb start -->
+    <div class="breadCrumbHolder module hidden-xs">
+      <div class="container">
+        <div id="breadCrumb" class="breadCrumb module">
+          <ul>
+            <li class="first"><a href="../../index.htm">Home</a></li>
+            <li><a href="using-pathway.html">Local Leaders</a></li>
+            <li class="last">Using Pathway</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+<!-- Breadcrumb end -->
       <!-- Start to the content area -->
 
       <div id="main-container" class="container">
@@ -232,7 +227,7 @@
               world... We must learn to assist and bless
               institute students and other LDS youth in
               Rhode Island and Rome while effectively
-              serving our students on campus in Rexburg.
+              serving our students on campus in Rexburg."
             </p>
           </div>    
           <div class="credit">President David A. Bednar, Inaugural Response, February 1998</div>
@@ -282,7 +277,7 @@
         <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="../../img/social-icons/twitter.png" width="27" height="27"></a>
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li> <a href="#">About Us</a> </li>
+        <li> <a href="../about-us.html">About Us</a> </li>
         <li> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
