--- a/pages/what_is_pathway/l_version/HPW.html
+++ b/pages/what_is_pathway/l_version/HPW.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -43,71 +42,65 @@
 
 
 <body>
-<header>
-	<div class="navbar navbar-inverse signIn pathway-header" role="signIn">
-		<div class="container">
-			<ul class="nav navbar-nav orange-bar">
-				<li class="header-column visible-xs pull-left">
-					&nbsp;
-				</li>
-				<li class="header-column pull-left">
-					<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../index.htm"><img src="../../../img/mobile-logo.png" id="pathway-mobile-logo"></a>
+<!-- START First Top Header -->
+<div class="navbar navbar-inverse signIn pathway-header">
+	<div class="container">
+		<ul class="nav navbar-nav orange-bar">
+			<li class="header-column visible-xs pull-left">&nbsp;</li>
+			<li class="header-column pull-left">
+				<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280" 
+
+					src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../../index.htm"><img id="pathway-mobile-logo" src="../../../img/mobile-logo.png"></a>
 				</li>
 				<li class="header-column pull-right">
 					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
-				<form class="navbar-right pull-right">
-					<button type="submit" class="btn signin-btn">
-						SIGN IN
+						<form class="navbar-right pull-right">
+							<button type="submit" class="btn signin-btn">
+								SIGN IN
+							</button>
+						</form>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<!-- END Top Header Start -->
+		<!-- START Navbar -->
+		<div class="navbar navbar-inverse site-navigation" role="navigation">
+			<div id="main_nav" class="container">
+				<div class="navbar-header">
+					<button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
-				</form>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div class="navbar navbar-inverse site-navigation" role="navigation">
-		<div id="main_nav" class="container">
-			<div class="navbar-header">
-				<button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+				</div>
+				<nav id="siteNavigation" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
+						<li class="nav-2"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-3"><a href="#join">Join Pathway</a></li>
+						<li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
+						<li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
+					</ul>
+				</nav>
 			</div>
-			<nav id="siteNavigation" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-					<li class="nav-1">
-						<a href="../../testimonials/testimonials.html">TESTIMONIALS</a>
-					</li>
-					<li class="nav-2 nav_active">
-						<a href="../what_is_pathway.html">WHAT IS PATHWAY</a>
-					</li>
-					<li class="nav-3">
-						<a href="#">JOIN PATHWAY</a>
-					</li>
-					<li class="nav-4">
-						<a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a>
-					</li>
-					<li class="nav-5">
-						<a href="../../local_leaders/using-pathway.html">LOCAL LEADERS</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</div>
-	<div class="breadCrumbHolder module hidden-xs">
-		<div class="container">
-			<div id="breadCrumb" class="breadCrumb module">
-				<ul>
-					<li class="first"><a href="../../../index.htm">Home</a></li>
-					<li><a href="../what_is_pathway.html">What Is Pathway</a></li>
-                    <li class="pipe-divider">L Version</li>
-					<li class="last lowercase">How Pathway Works</li>
-				</ul>
+		</div> 
+		<!-- END Navbar -->	
+		<!-- Breadcrumb start -->
+		<div class="breadCrumbHolder module hidden-xs">
+			<div class="container">
+				<div id="breadCrumb" class="breadCrumb module">
+					<ul>
+						<li class="first"><a href="../../../index.htm">Home</a></li>
+						<li><a href="../what_is_pathway.html">What Is Pathway</a></li>
+						<li class="pipe-divider">L Version</li>
+						<li class="last lowercase">How Pathway Works</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>	
-</header>
+<!-- Breadcrumb end -->
 <!-- Start to the content area -->
 
 <div id="main-container" class="container">
@@ -149,7 +142,7 @@
 				<img class="center-block img-responsive img-space" src="../../../img/hpw/pathway_course_sequence.png" alt="pathway course sequence" width="100%">
 
 				<h3 id="ReligionClasses" class="p-heading turquoise">Religion Courses</h3>
-				<p>Because of the advantages for English-learning Church members, L-version students are strongly encouraged to
+				<p>Because of the advantages for English-learning Church members, L version students are strongly encouraged to
 				enroll in an institute class of their choice during the three semesters of Pathway.</p>
 
 				<h3 id="WeeklyGathering" class="p-heading turquoise">Weekly Gathering</h3>
@@ -162,7 +155,7 @@
 
 				<img class="center-block img-responsive img-space" src="../../../img/hpw/semester_schedule_blue.png" alt="semester track" width="100%">
 			</div>
-			<a href="speaking_partners.html" class="next turquoise">Speaking Partners >></p>
+            <p><a href="speaking_partners.html" class="next turquoise">Speaking Partners >></a></p>
 		</div>
 
 				
@@ -253,7 +246,7 @@
         <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="../../../img/social-icons/twitter.png" width="27" height="27"></a>
         <a class="social-icon" href="http://www.youtube.com/byuionline"><img src="../../../img/social-icons/youtube.png" width="27" height="27"></a> </li>
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li> <a href="#">About Us</a> </li>
+        <li> <a href="../../about-us.html">About Us</a> </li>
         <li> <a href="../../pathway-faq.html"><img class="faq-bubble" src="../../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
       </ul>
@@ -268,7 +261,7 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> 
 <script src="../../../dist/js/bootstrap.min.js"></script> 
-<script src="../../../js/jquery.easing.1.3.js" type="text/javascript" language="JavaScript"></script>
+<script src="../../../js/jquery.easing.1.3.js" type="text/javascript" ></script>
 <script src="../../../js/drawer.js" type="text/javascript"></script>
 </body>
 </html>
